--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,115 +1,133 @@
+:root{
+    --dark:#374151;
+    --darker:#1f2937;
+    --darkest:#111827;
+    --gray:#6B7280;
+    --light:#eee;
+    --pink:#ec4899;
+    --purple:#885cf6;
+
+}
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    font-family: 'Fira sans', sans-serif;
+}
 body{
-    background-color: #161623;
-    
-}
-.light{
-    height: 40px;
-    width: 40px;
-    display: block;
-    margin-left: auto;
-    padding: 20px 20px;
-}
-.topic{
-    color: #161623;
-}
-.heading{
     display: flex;
-}
-.todoslist{
-    margin-top: 30px;
-}
-.container{
-    display: flex;
-    border: 1px solid black;
-    margin-bottom: 0px;
-    border-bottom: none;
-}
-.todoslist .container:first-child{
-    border-radius: 0.5rem  .5rem 0 0 ;
-    border-bottom: none;
-}
-
-.createicon{
+    flex-direction: column;
+    min-height: 100vh;
+    background-color: var(--dark);
     color: white;
-    height: 10px;
-    width: 10px;
-    margin-left: 20px;
-    padding: 5px;
-    border-radius: 50%;
 }
-.inputcreate{
-    margin-left: 10px;
-    padding-left: 3px;
-    text-align: left;
-    font-size: large;
-    font-weight: 900;
-    padding: 10px;
-    border: 0px;
-    margin: 0px;
-}
-#check{
-   margin-left: 30px;
-   width: 20px;
-}
-p{
-    margin-left: 10px;
-    font-size: large;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-input[type="text"]{
-    outline: none;
-}
-.todo{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background-color: white;
-    padding: 4rem;
-    width: 40%;
-    border-radius: 0.5rem;
-}
-.create{
-    border: 1px solid black;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    border-radius: 0.5rem;
-}
-.inputTodos{
-    margin-top: 3rem;
-}
-.bottomBar{
-    display: flex;
-    border: 1px solid black;
-    padding: 1rem;
-    gap: 10px;
-
-
-}
-.bottomBar>div{
-    flex-basis: 0;
-    flex-grow: 1;
-}
-.clear{
-    text-align: right;
-}
-.link{
-    text-align: center;
-}
-button{
-    margin-left: 50px;    
-    padding: 10px;
+header{
+    padding: 2rem 1rem;
+    max-width: 800px;
     width: 100%;
-    font-weight: bolder;
-    font-family:'Courier New', Courier, monospace;
+    margin: 0 auto;
+}
+header h1{
+    font-size: 2.5rem;
+    font-weight: 300;
+    color: var(--gray);
+    margin-bottom: 1rem;
+}
+#new-task-form{
+    display: flex;
+}
+input,button{
+    appearance: none;
+    border: none;
+    outline: none;
+    background: none;
+}
+#new-task-input{
+    flex: 1 1 0%;
+    background-color: var(--darker);
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-right: 1rem;
+    color: var(--light);
+    font-size: 1.25rem;
+}
+#new-task-input::placeholder{
+    color: var(--gray);
+}
+#new-task-submit{
+    font-size: 1.25rem;
+    font-weight: 700;
+    background-image: linear-gradient(to right,var(--pink),var(--purple));
+    -webkit-background-clip:text;
+    -webkit-text-fill-color:transparent;
+}
 
+#new-task-submit:hover{
+    opacity: 0.8;
 }
-a{
-    text-decoration: none;
-    color:darkblue;
-    font-weight: 400;
+#new-task-submit:active{
+    opacity: 0.6;
 }
-a:hover{
-    color: blue;
+main{
+    flex: 1 1 0%;
+    padding: 2rem 1rem;
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+}
+.task-list{
+    padding: 1rem;
+}
+.task-list h2{
+    font-size: 1.5rem;
+    font-weight: 300;
+    color: var(--gray);
+    margin-bottom: 1rem;
+}
+#tasks .task{
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--darkest);
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+}
+.content{
+    flex: 1 1 0%;
+}
+#tasks .task .content .text{
+    color: var(--light);
+    font-size: 1.25rem;
+    width: 100%;
+    display: block;
+    transition: 0.4s;
+}
+#tasks .task .content .text:not(:read-only){
+    color: var(--pink );
+}
+
+#tasks .task .actions{
+    display: flex;
+    margin: 0 -0.5rem;
+}
+.task .actions button{
+    cursor: pointer;
+    margin: 0 0.5rem;
+    font-size: 1.123rem;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.task .actions button:hover{
+    opacity: 0.4;
+}
+.task .actions button:active{
+    opacity: 1.6;
+}
+.task .actions .edit{
+    background-image: linear-gradient(to right,var(--pink),var(--purple));
+    -webkit-background-clip:text;
+    -webkit-text-fill-color:transparent;
+}
+.task .actions .delete{
+    color: crimson;
 }
